# nimbus.component.person_follower_sensor_fusion

./: Dockerfile  entrypoint.sh  push_component.sh
Nimbus_Component/: nimbusc.json
bbox_convertor/: CMakeLists.txt
bbox_convertor/src/: bbox_convertor_node.cpp
leg_target_detector/: CHANGELOG.rst  CMakeLists.txt  package.xml
leg_target_detector/launch/: joint_leg_tracker.launch
leg_target_detector/launch/training/: extract_positive_training_clusters_res=0.33.launch  train_leg_detector_res=0.33.launch
leg_target_detector/scripts/: individual_leg_tracker.py  joint_leg_tracker.py
leg_target_detector/src/: cluster_features.cpp  detect_leg_clusters.cpp  extract_positive_training_clusters.cpp  laser_processor.cpp  local_occupancy_grid_mapping.cpp  train_leg_detector.cpp
person_follower_sensor_fusion/: CMakeLists.txt  package.xml
person_follower_sensor_fusion/include/: command_velocity_manager.h  obstacles_detect_manager_.h  params.h  person_follower_sensor_fusion_node.h
person_follower_sensor_fusion/launch/: follower.launch
person_follower_sensor_fusion/src/: person_follower_sensor_fusion.cpp  person_follower_sensor_fusion_node.cpp
